Example code how to deal with classes in JS

--- a/form/form.html
+++ b/form/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head title="Classes ES6 Demo">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css"/>
 </head>
@@ -9,7 +9,7 @@
 
 <p>Enter names in the fields, then click "Submit" to submit the form:</p>
 
-<form id="frm1">
+<form id="personal-form">
     <table>
         <tr>
             <td class="textbox" colspan="2"><select id="person_id" class="id"></select></td>
