First stage of Pong + refactoring

--- a/es6-classes-sample/demo.html
+++ b/es6-classes-sample/demo.html
@@ -15,23 +15,24 @@
 
 <p>Examples based on:<a href="https://googlechrome.github.io/samples/classes-es6/">googlechrome.github.io</a></p>
 
-    <input type=button onclick="polygonDemo()" value="Polygon Demo"/>
-    <input type=button onclick="polyDemo()" value="Poly Demo"/>
-    <input type=button onclick="squareDemo()" value="Square Demo"/>
-    <input type=button onclick="myDateDemo1()" value="My Date Demo 1"/>
-    <input type=button onclick="myDateDemo2()" value="My Date Demo 2"/>
-    <input type=button onclick="ExtendedUint8ArrayDemo()" value="My Date Demo 2"/>
-    <input type=button onclick="MyAudioDemo()" value="My Date Demo 2"/>
-    <input type=button onclick="rectangleDemo()" value="Rectangle Demo"/>
-    <input type=button onclick="tripleDemo()" value="Triple Demo"/>
+<input type=button onclick="polygonDemo()" value="Polygon Demo"/>
+<input type=button onclick="polyDemo()" value="Poly Demo"/>
+<input type=button onclick="squareDemo()" value="Square Demo"/>
+<p></p>
+<input type=button onclick="myDateDemo1()" value="My Date Demo 1"/>
+<input type=button onclick="myDateDemo2()" value="My Date Demo 2"/>
+<input type=button onclick="ExtendedUint8ArrayDemo()" value="My Date Demo 2"/>
+<p></p>
+<input type=button onclick="MyAudioDemo()" value="My Date Demo 2"/>
+<input type=button onclick="rectangleDemo()" value="Rectangle Demo"/>
+<input type=button onclick="tripleDemo()" value="Triple Demo"/>
 
-    <br/>
-    <input type="text"
-           rows="1500"
-           style="width:1200px; height:100px; background: #03A9F4"
-           name="output"
-           id="output"
-           value=""/>
+<br/>
+<label for="output"></label><input type="text"
+                                   style="width:1200px; height:100px; background: #03A9F4"
+                                   name="output"
+                                   id="output"
+                                   value=""/>
 </body>
 
 </html>
