--- a/pong/pong.html
+++ b/pong/pong.html
@@ -7,9 +7,10 @@
 </head>
 
 <body onload="init();">
-<div id="board">
+<div id="board" onmousemove="getMousePos(event)" onmouseout="stopTrackingMouse()">
     <div id="ball"></div>
 </div>
+<div id = "displayArea"></div>
 
 <script src="classes/velocityVector.js"></script>
 <script src="classes/ball.js"></script>
@@ -17,5 +18,6 @@
 <script src="pong.js"></script>
 <script src="key-listener.js"></script>
 <script src="animation.js"></script>
+<script src="../common/lib.js"></script>
 </body>
 </html>
