--- a/paint/paint.html
+++ b/paint/paint.html
@@ -27,8 +27,8 @@
             </table>
         </td>
         <td>
-            <div id="board" onmousemove="getMousePos(event)" onmouseout="stopTrackingMouse()"
-                 onmousedown="setClicked()" onmouseup="resetClicked()"/>
+            <div id="board" onmousemove="draw(event)" onmouseout="stopTrackingMouse()"
+                 onmousedown="setClicked()" onmouseup="resetClicked()"></div>
         </td>
     </tr>
     <tr>
