--- a/tictactoe-game/tictactoe.html
+++ b/tictactoe-game/tictactoe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Tic Tac Toe</title>
 
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="tictactoe.css"/>
 </head>
 <body>
 
@@ -30,6 +30,6 @@
     <div class="text"></div>
 </div>
 <button onclick="startGame()">Replay</button>
-    <script src="script.js"></script>
+<script src="tictactoe.js"></script>
 </body>
 </html>
