Requests sent to REST-type server

--- a/es6-tutorial/index.html
+++ b/es6-tutorial/index.html
@@ -6,6 +6,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="application/javascript" src="js/animation.js"></script>
+    <title>ES6 Tutorial</title>
 </head>
 <body onload="animate();">
 <header>
