--- a/javascriptnotesfroprofessionals/training2.html
+++ b/javascriptnotesfroprofessionals/training2.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <title>JS Training 2</title>
 </head>
-<body>
+<body style="background: #555555; color: aqua">
+Pls open the browser console.
+<div>
+    <p>
+        <input id="kitty" type="button" value="? :" onclick="writeIfKittyIsCute">
+    </p>
+    <p>
+        <input id="diff" type="button" value="Difference between Object.key and Object.prototype.key" onclick="keyPrototypeDifference">
+    </p>
+</div>
+<div>
+    <label for="output"></label><input type="text"
+                                       style="width:1200px; height:100px; background: #050505; color: aliceblue"
+                                       name="output"
+                                       id="output"
+                                       value=""/>
 
+</div>
+
+<script src="training2scripts/ternary.js"></script>
 </body>
 </html>
