--- a/javascriptnotesfroprofessionals/ajax.html
+++ b/javascriptnotesfroprofessionals/ajax.html
@@ -7,9 +7,11 @@
 <body>
 
 <p><a href="#" onclick="getStackExchangeTopJSQuestions()">Stack Exchange Top JSQuestions</a></p>
-<p><a href="#" onclick="getVolvo()">AJAX with GET</a> (need to start server prior to use this functionality)</p>
+<p><a href="#" onclick="sendGetCountriesRequestToBackend(8083)">AJAX with GET</a> (need to start server prior to use this functionality)</p>
 
+<script src="ajax-scripts/logger.js"></script>
 <script src="ajax-scripts/stackoverflow-ajax.js"></script>
 <script src="ajax-scripts/get-ajax.js"></script>
+<script src="ajax-scripts/client4kotlinbackend4java.js"></script>
 </body>
 </html>
